# sshout-server

./: CMakeLists.txt  INSTALL  Makefile  README.md  api-packet.c  api.h  base64.c  base64.h  build-info.sh  client-api.c  client-cli.c  client-irc.c  client.c  client.h  common.h  file-helpers.c  file-helpers.h  irc.h  local-packet.c  main.c  misc.c  misc.h  server.c  sshoutcfg.8  sshoutcfg.c  syncrw.c  syncrw.h
cmake/: FindMhash.cmake
deploy/systemd/: sshout.service
include/: base64.h  file-helpers.h  irc.h  syncrw.h
po/: template.po  zh_CN.po  zh_TW.po
src/: api-packet.c  client-api.c  local-packet.c  main.c  server.c  syncrw.c
